Added sort by criteria

--- a/src/scripts/conservatory/drilldown/conservatory-drilldown.html
+++ b/src/scripts/conservatory/drilldown/conservatory-drilldown.html
@@ -3,8 +3,8 @@
         {{'chart.download' | translate}}
     </md-tooltip>
     <md-select ng-model="departments" placeholder="{{'department.select' | translate }}">
-        <md-option value="" ng-click="$ctrl.resetChart()"></md-option>
-        <md-option ng-repeat="currentDep in $ctrl.departmentOptions" value="{{currentDep}}"
+        <md-option ng-value="" ng-click="$ctrl.resetChart()"></md-option>
+        <md-option ng-repeat="currentDep in $ctrl.departmentOptions" ng-value="{{currentDep}}"
                    ng-click="$ctrl.selectDepartment(currentDep)">{{currentDep}}</md-option>
     </md-select>
 </div>
