--- a/src/index.html
+++ b/src/index.html
@@ -25,8 +25,8 @@
     <md-nav-bar layout-gt-xs md-selected-nav-item="currentNavItem"
                 aria-label="{{'navigate.title' | translate}}" ng-cloak>
         <md-nav-item md-nav-sref="dashboard" name="dashboard"
-                     aria-label="{{'conservatories.title' | translate}}" class="upper-first-letter">
-            {{'conservatories.title' | translate}}
+                     aria-label="{{'conservatory.title' | translate}}" class="upper-first-letter">
+            {{'conservatory.title' | translate}}
         </md-nav-item>
         <md-nav-item md-nav-sref="charts" name="charts" aria-label="{{'analysis' | translate}}"
                      class="upper-first-letter">
@@ -64,7 +64,7 @@
     <md-toolbar>
         <md-fab-actions class="md-toolbar-tools">
 
-            <md-button ui-sref="dashboard" aria-label="{{'conservatories.title' | translate}}"
+            <md-button ui-sref="dashboard" aria-label="{{'conservatory.title' | translate}}"
                        class="md-icon-button">
                 <md-icon md-font-set="material-icons">list</md-icon>
             </md-button>
